[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Ganttlets.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Effects/fade.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Backgrounds/title_background.png" type="Texture" id=4]
[ext_resource path="res://Interfaces/TitleScreen/title_interface.gd" type="Script" id=7]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range( 0.0, 1.0 );
uniform float smooth_size : hint_range( 0.0, 1.0 );
uniform sampler2D mask : hint_albedo;

void fragment()
{
	float value = texture( mask, UV ).r;
	float alpha = smoothstep( cutoff, cutoff + smooth_size, value * (1.0 - smooth_size) + smooth_size);
	COLOR = texture(TEXTURE,UV) * vec4( COLOR.rgb, alpha );
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/cutoff = 0.62
shader_param/smooth_size = 0.593
shader_param/mask = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 160
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="TitleInterface" type="Control"]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRectGray" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectWhite" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 223.0
margin_right = 1297.0
margin_bottom = 880.0
size_flags_horizontal = 4
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 1074.0
margin_bottom = 489.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
text = "Nieuwsgierig Aagje"
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 493.0
margin_right = 1074.0
margin_bottom = 645.0
rect_min_size = Vector2( 1074, 0 )
size_flags_horizontal = 4
custom_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 416.0
margin_right = 657.0
margin_bottom = 152.0

[node name="Spelen" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Spelen"
flat = true

[node name="Afsluiten" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 241.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Afsluiten"
flat = true
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/Spelen" to="." method="_on_Spelen_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/Afsluiten" to="." method="_on_Afsluiten_pressed"]
